[package]
name = "trading_matching_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"] }
ethers = "2.0.14"
tokio = { version = "1", features = ["full"] } # for asynchronous handling
actix-cors = "0.6.4"
actix-web = "4.2.1"
argon2 = "0.4.1"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid","bigdecimal" , "json"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
ethereum-types = "0.15.1"
log = "0.4.22"
sha3 = "0.10.8"
num-bigint = "0.4.6"
anyhow = "1.0.93"
